# brasilapi-python

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
brasilapi/: __init__.py  client.py
brasilapi/dto/: bank.py  cep.py  ddd.py  feriado.py  fipe.py
brasilapi/exception/: __init__.py  request_exception.py  validation_exception.py
brasilapi/http/: __init__.py  aiohttp_client.py
brasilapi/services/: bank.py  base.py  cep.py  ddd.py  feriado.py  fipe.py
tests/: conftest.py
tests/unit/: test_client.py
tests/unit/dto/: test_bank.py  test_cep.py  test_ddd.py  test_feriado.py  test_fipe.py
tests/unit/exception/: test_request_exception.py  test_validation_exception.py
tests/unit/http/: test_aiohttp_client.py
tests/unit/services/: test_bank_service.py  test_base_service.py  test_cep_service.py  test_ddd_service.py  test_feriado_service.py  test_fipe_service.py
